fixed image to stretch

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(https://img.freepik.com/premium-photo/animated-group-kids-playing-simon-says-school-field-combining-physical-movement-with-attentive-listening-solid-color-background-4k-ultra-hd_964851-174518.jpg?w=1380)
+  background-image: url(https://img.freepik.com/premium-photo/animated-group-kids-playing-simon-says-school-field-combining-physical-movement-with-attentive-listening-solid-color-background-4k-ultra-hd_964851-174518.jpg?w=1380);
   background-size: 100% auto;
 }
 
